Show store categories.

--- a/static/ng/shop/templates/store-home.html
+++ b/static/ng/shop/templates/store-home.html
@@ -1,3 +1,8 @@
 <div>
   <div>Store {{ store.slug }}</div>
+  <ul>
+    <li ng-repeat="category in store.categories">
+      {{ category.name }}
+    </li>
+  </ul>
 </div>
